Removed the unused rename apk part

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -50,7 +50,7 @@ jobs:
 
     outputs:
       versionName: ${{ steps.getVersion.outputs.versionName }}
-      apkfile: ${{ steps.renameApk.outputs.apkfile }}
+      apkfile: app/build/outputs/apk/release/app-release.apk
 
     steps:
       - name: Checking out branch
@@ -79,22 +79,11 @@ jobs:
           RELEASE_KEY_PASSWORD: ${{ secrets.RELEASE_KEY_PASSWORD }}
         run: ./gradlew assembleRelease --stacktrace
 
-      - name: Rename APK
-        id: renameApk
-        run: |
-          APK_PATH="app/build/outputs/apk/release/app-release.apk"
-          VERSION_NAME="${{ steps.getVersion.outputs.versionName }}"
-          NEW_APK_NAME="androidapp-$VERSION_NAME.apk"
-          mkdir -p ./release-builds
-          mv "$APK_PATH" "./release-builds/$NEW_APK_NAME"
-          echo "::set-output name=apkfile::./release-builds/$NEW_APK_NAME"
-        shell: bash
-
       - name: Upload APK as artifact
         uses: actions/upload-artifact@v3
         with:
           name: release-apk-${{ steps.getVersion.outputs.versionName }}
-          path: ./release-builds/androidapp-${{ steps.getVersion.outputs.versionName }}.apk
+          path: app/build/outputs/apk/release/app-release.apk
 
   deploy:
     runs-on: ubuntu-latest
@@ -114,7 +103,7 @@ jobs:
 
       - name: Send the APK to Telegram
         env:
-          APK_PATH: ./release-builds/androidapp-${{ needs.build.outputs.versionName }}.apk
+          APK_PATH: ./release-builds/app-release.apk
           BOT_API_KEY: ${{ secrets.BOT_API_KEY }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
         run: |
