--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -63,13 +63,10 @@ jobs:
         id: getVersion
         run: |
           VERSION_NAME=$(./gradlew -q androidGitVersion | grep name | cut -d' ' -f2)
-          
-          # Sanitize versionName by removing unwanted characters
-          VERSION_NAME=$(echo "$VERSION_NAME" | tr -d '\t\n\r')  # Remove tab, newline, and carriage return
-          
-          # Ensure that only the version part (e.g., 1.0.1-dirty) is used
-          VERSION_NAME=$(echo "$VERSION_NAME" | sed 's/^[^0-9]*//')  # Strip out any prefix text like androidGitVersion.name
+          VERSION_NAME=$(echo "$VERSION_NAME" | tr -d '\t\n\r')
+          VERSION_NAME=$(echo "$VERSION_NAME" | sed 's/^[^0-9]*//')
           echo "::set-output name=versionName::$VERSION_NAME"
+          echo "Version Name: $VERSION_NAME"
         shell: bash
 
       - name: Build Release apk
@@ -79,38 +76,50 @@ jobs:
           RELEASE_KEY_PASSWORD: ${{ secrets.RELEASE_KEY_PASSWORD }}
         run: ./gradlew assembleRelease --stacktrace
 
+      - name: Verify APK existence
+        run: |
+          ls -l app/build/outputs/apk/release/
+          if [ ! -f "app/build/outputs/apk/release/app-release.apk" ]; then
+            echo "Error: APK file not found!"
+            exit 1
+          fi
+
       - name: Upload APK as artifact
         uses: actions/upload-artifact@v3
         with:
           name: release-apk-${{ steps.getVersion.outputs.versionName }}
           path: app/build/outputs/apk/release/app-release.apk
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
+    deploy:
+      runs-on: ubuntu-latest
+      needs: build
 
-    steps:
-      - name: Download APK artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: release-apk-${{ needs.build.outputs.versionName }}
-          path: ./release-builds
+      steps:
+        - name: Print version name
+          run:
+            echo "Deploying version: ${{ needs.build.outputs.versionName }}"
 
-      - name: Check APK file path
-        run: |
-          echo "Checking for APK file..."
-          ls -l ./release-builds
+        - name: Download APK artifact
+          uses: actions/download-artifact@v3
+          with:
+            name: release-apk-${{ needs.build.outputs.versionName }}
+            path: ./release-builds
 
-      - name: Send the APK to Telegram
-        env:
-          APK_PATH: ./release-builds/app-release.apk
-          BOT_API_KEY: ${{ secrets.BOT_API_KEY }}
-          CHAT_ID: ${{ secrets.CHAT_ID }}
-        run: |
-          if [ -f "$APK_PATH" ]; then
-            echo "Sending APK: $APK_PATH"
-            curl -F chat_id=$CHAT_ID -F document=@"$APK_PATH" -F caption="Template-$(date +"%Y%m%d-%H%M")" https://api.telegram.org/bot${BOT_API_KEY}/sendDocument
-          else
-            echo "Error: APK file not found at $APK_PATH"
-            exit 1
-          fi
+        - name: Check APK file path
+          run: |
+            echo "Checking for APK file..."
+            ls -l ./release-builds
+
+        - name: Send the APK to Telegram
+          env:
+            APK_PATH: ./release-builds/app-release.apk
+            BOT_API_KEY: ${{ secrets.BOT_API_KEY }}
+            CHAT_ID: ${{ secrets.CHAT_ID }}
+          run: |
+            if [ -f "$APK_PATH" ]; then
+              echo "Sending APK: $APK_PATH"
+              curl -F chat_id=$CHAT_ID -F document=@"$APK_PATH" -F caption="Template-$(date +"%Y%m%d-%H%M")" https://api.telegram.org/bot${BOT_API_KEY}/sendDocument
+            else
+              echo "Error: APK file not found at $APK_PATH"
+              exit 1
+            fi
