--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -79,7 +79,7 @@ jobs:
       - name: Verify APK existence
         run: |
           ls -l app/build/outputs/apk/release/
-          if [ ! -f "app/build/outputs/apk/release/app-release-unsigned.apk" ]; then
+          if [ ! -f "app/build/outputs/apk/release/app-release.apk" ]; then
             echo "Error: APK file not found!"
             exit 1
           fi
@@ -90,7 +90,7 @@ jobs:
           name: release-apk-${{ steps.getVersion.outputs.versionName }}
           path: app/build/outputs/apk/release/app-release.apk
 
-  deploy:  # This job is now correctly placed under 'jobs'
+  deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
